--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <div class="container">
         <div class="avatar">
             <a href="">
-                <img src="./images/cat-codespace.png" alt="Skytsunami" />
+                <img src="C:\Users\minip\OneDrive\Pictures\Saved Pictures\image3.jpeg"Skytsunami" />
             </a>
         </div>
         <div class="content">
-            <h1>CodeSpace Cat</h1>
+            <h1>Minenhle Ncapai</h1>
             <p>Follow me on:</p>
             <p>
                 <span><a href="https://github.com/CodeSpace-Academy"><img src="./images/icons8-github-96.png" alt="GitHub"></a></span>
