--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="avatar">
             <a href="">
-                <img src="C:\Users\minip\OneDrive\Pictures\Saved Pictures\image3.jpeg"Skytsunami" />
+                <img src=""Skytsunami" />
             </a>
         </div>
         <div class="content">
