Link for my image
Add link to view image

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="avatar">
             <a href="">
-                <img src=""Skytsunami" />
+                <img src="images/Minenhle-N.jpeg"Skytsunamimages/>
             </a>
         </div>
         <div class="content">
