Updated codepen link

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <p>
                 <span><a href="https://github.com/MinnieNcapai"><img src="./images/icons8-github-96.png" alt="GitHub"></a></span>
                 <span><a href="https://www.linkedin.com/in/minenhle-ncapai1"><img src="./images/icons8-linkedin-96.png" alt="LinkedIn"></a></span>
-                <span><a href=""><img src="./images/icons8-codepen-96.png" alt="CodePen"></a></span>
+                <span><a href="https://codepen.io/Minenhle-Ncapai"><img src="./images/icons8-codepen-96.png" alt="CodePen"></a></span>
             </p>
         </div>
     </div>    
